Fix hero z-index and nav menu items wrapping

--- a/wagtailio/static/css/components/hero.scss
+++ b/wagtailio/static/css/components/hero.scss
@@ -41,6 +41,7 @@
     position: relative;
     max-width: $max-width;
     margin: 0 auto;
+    z-index: 1;
   }
 
   .text-container {
