--- a/wagtailio/static/css/components/nav-item.scss
+++ b/wagtailio/static/css/components/nav-item.scss
@@ -3,6 +3,7 @@
   display: flex;
   align-items: center;
   margin: 0;
+  white-space: nowrap;
 
   .primary-nav & {
     @include font-smoothing();
